--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@angular/platform-browser": "^14.0.0-next.0",
     "@angular/platform-browser-dynamic": "^14.0.0-next.0",
     "@angular/router": "^14.0.0-next.0",
-    "firebase": "^9.9.3",
+    "bootstrap": "^3.4.1",
+    "firebase": "^9.9.4",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.31",
     "tslib": "^2.3.0",
